overlays/production/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
   name: frontend
   labels:
     app: todonodejs
     name: frontend
spec:
  host: todo.apps.ocp4-mng.example.com
  path: "/todo"
  to:
    kind: Service
    name: prod-frontend
    weight: 100
  wildcardPolicy: None
